ingress/ingress3_annotations.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kick-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "somecookiename"
    nginx.ingress.kubernetes.io/session-cookie-hash: "somesha"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: sails-frontend
          servicePort: 8000
      - path: /device
        backend:
          serviceName: sails-backend
          servicePort: 1337
